intear-dex-management/tests/snapshots/engine_admin__operations_run_without_operations.snap
---
source: intear-dex-management/tests/engine_admin.rs
expression: no_operations_record
---
$ near-intear-dex-management engine operations run alice.near [TEMPORARY DIRECTORY]/no-operations.json network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management engine operations run alice.near [TEMPORARY DIRECTORY]/no-operations.json network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send

Error:
   0: [TEMPORARY DIRECTORY]/no-operations.json has no operations
