intear-dex-management/tests/snapshots/engine_admin__rescue_more_than_untracked.snap
---
source: intear-dex-management/tests/engine_admin.rs
expression: "cli.transaction(ENGINE,\n&[\"engine\", \"admin\", \"rescue\", \"nep141:usdt.tether-token.near\", \"10 USDt\",\n\"to\", \"alice.near\"]).await"
---
$ near-intear-dex-management engine admin rescue nep141:usdt.tether-token.near '10 USDt' to alice.near network-config sandbox sign-with-plaintext-private-key ed25519:31RNZv9Mu9yyhbK9AsqxFMM8M9YoDQNWuqLjpPDZ3a8sQazgTxQXfBWg8KmGkx6CKyKcw6kMn6Z9YcqRvKZdFQBa send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management engine admin rescue nep141:usdt.tether-token.near '10 USDt' to alice.near network-config sandbox sign-with-plaintext-private-key ed25519:31RNZv9Mu9yyhbK9AsqxFMM8M9YoDQNWuqLjpPDZ3a8sQazgTxQXfBWg8KmGkx6CKyKcw6kMn6Z9YcqRvKZdFQBa send

Error:
   0: dex.intear.near has 7.5 USDt untracked, less than 10 USDt
