intear-dex-management/tests/snapshots/engine_admin__rescue_to_account_without_token_storage.snap
---
source: intear-dex-management/tests/engine_admin.rs
expression: "cli.transaction(ENGINE,\n&[\"engine\", \"admin\", \"rescue\", \"nep141:usdt.tether-token.near\", \"all\", \"to\",\n\"carol.near\"]).await"
---
$ near-intear-dex-management engine admin rescue nep141:usdt.tether-token.near all to carol.near network-config sandbox sign-with-plaintext-private-key ed25519:31RNZv9Mu9yyhbK9AsqxFMM8M9YoDQNWuqLjpPDZ3a8sQazgTxQXfBWg8KmGkx6CKyKcw6kMn6Z9YcqRvKZdFQBa send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management engine admin rescue nep141:usdt.tether-token.near all to carol.near network-config sandbox sign-with-plaintext-private-key ed25519:31RNZv9Mu9yyhbK9AsqxFMM8M9YoDQNWuqLjpPDZ3a8sQazgTxQXfBWg8KmGkx6CKyKcw6kMn6Z9YcqRvKZdFQBa send

Error:
   0: carol.near has no storage on usdt.tether-token.near, so it can't receive the rescued tokens

Suggestion: Rescue to an account that has storage on usdt.tether-token.near, or pay for carol.near's storage there with its storage_deposit first
