intear-dex-management/tests/snapshots/engine_admin__rescue_while_not_paused.snap
---
source: intear-dex-management/tests/engine_admin.rs
expression: "cli.transaction(ENGINE,\n&[\"engine\", \"admin\", \"rescue\", \"nep141:usdt.tether-token.near\", \"all\", \"to\",\n\"alice.near\"]).await"
---
$ near-intear-dex-management engine admin rescue nep141:usdt.tether-token.near all to alice.near network-config sandbox sign-with-plaintext-private-key ed25519:31RNZv9Mu9yyhbK9AsqxFMM8M9YoDQNWuqLjpPDZ3a8sQazgTxQXfBWg8KmGkx6CKyKcw6kMn6Z9YcqRvKZdFQBa send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management engine admin rescue nep141:usdt.tether-token.near all to alice.near network-config sandbox sign-with-plaintext-private-key ed25519:31RNZv9Mu9yyhbK9AsqxFMM8M9YoDQNWuqLjpPDZ3a8sQazgTxQXfBWg8KmGkx6CKyKcw6kMn6Z9YcqRvKZdFQBa send

Error:
   0: dex.intear.near must be paused to rescue assets, so that no withdrawal is in flight while it counts what it holds

Suggestion: Pause it first with `engine pause`, signed by slimedragon.near or pause.slimedragon.near
