intear-dex-management/tests/snapshots/engine_admin__set_trusted_code_deployer.snap
---
source: intear-dex-management/tests/engine_admin.rs
expression: "cli.transaction(\"slimedragon.near\",\n&[\"engine\", \"admin\", \"set-trusted-code-deployer\", \"slimedragon.near\",\n\"bob.near\"]).await"
---
$ near-intear-dex-management engine admin set-trusted-code-deployer slimedragon.near bob.near network-config sandbox sign-with-plaintext-private-key ed25519:3Jr44c7TzFcexmD2nYX7qD5Vm8td8GdDqTK4MvRKi6mCijP254c7sRtTvYDLF3kngAuBosWUkGokz1qYLZSkNyrn send
exit code: 0
--- stdout ---
--- stderr ---
├  sandbox · signer slimedragon.near · dex.intear.near
│  Make bob.near the trusted code deployer of dex.intear.near, the only account that can deploy dex code; slimedragon.near no longer can
│  Actions: set_trusted_code_deployer (1 yoctoNEAR, 10 Tgas)
├  Unsigned transaction:
│    signer_id:    slimedragon.near
│    receiver_id:  dex.intear.near
│    actions:
│       -- function call:
│                       method name:  set_trusted_code_deployer
│                       args:         {
│                                       "account_id": "bob.near"
│                                     }
│                       gas:          10.0 Tgas
│                       deposit:      1 yoctoNEAR
│
├  Your transaction was signed successfully.
│    Public key: ed25519:[HASH]
│    Signature:  ed25519:[SIGNATURE]
│
├  Transaction Execution Info:
│    Gas burned: [GAS]
│    Transaction fee: [FEE]
│    Transaction ID: [HASH]
│    To see the transaction in the transaction explorer, please open this url in your browser:
│    http://[SANDBOX RPC]/transactions/[HASH]
│
├  Function execution logs:
│    Logs [dex.intear.near]:   No logs
│    Logs [slimedragon.near]:   No logs
│
├  Function execution return value:
│    Empty return value
│


The "set_trusted_code_deployer" call to <dex.intear.near> on behalf of <slimedragon.near> succeeded.

├  ✓ bob.near is now the trusted code deployer of dex.intear.near


Here is your console command if you need to script it or re-run:
    near intear-dex-management engine admin set-trusted-code-deployer slimedragon.near bob.near network-config sandbox sign-with-plaintext-private-key ed25519:3Jr44c7TzFcexmD2nYX7qD5Vm8td8GdDqTK4MvRKi6mCijP254c7sRtTvYDLF3kngAuBosWUkGokz1qYLZSkNyrn send
