intear-dex-management/tests/snapshots/engine_admin__set_trusted_code_deployer_by_account_other_than_the_deployer.snap
---
source: intear-dex-management/tests/engine_admin.rs
expression: "cli.transaction(\"alice.near\",\n&[\"engine\", \"admin\", \"set-trusted-code-deployer\", \"alice.near\",\n\"bob.near\"]).await"
---
$ near-intear-dex-management engine admin set-trusted-code-deployer alice.near bob.near network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management engine admin set-trusted-code-deployer alice.near bob.near network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send

Error:
   0: alice.near can't hand over the permission to deploy dex code: only the trusted code deployer, slimedragon.near, can

Suggestion: Sign with slimedragon.near
